# nix-templates

./: flake.nix
cpp-meson/: .clang-format  .clang-tidy  .gitignore  README.md  flake.nix  meson.build  package.nix  shell.nix
cpp-meson/include/: util.hpp
cpp-meson/src/: main.cpp  util.cpp
cpp-meson/tests/: test_util.cpp
nix-rust-moonrepo/: flake.nix
python-uv/: .gitignore  README.md  flake.nix  pyproject.toml
python-uv/src/hello_world/: __init__.py
python-uv/tests/: test_hello.py
